docs/envoy/v1.20.3/_sources/api-v3/extensions/filters/network/mysql_proxy/v3/mysql_proxy.proto.rst.txt
.. _envoy_v3_api_file_contrib/envoy/extensions/filters/network/mysql_proxy/v3/mysql_proxy.proto:

MySQL proxy
===========




.. _extension_envoy.filters.network.mysql_proxy:

This extension may be referenced by the qualified name ``envoy.filters.network.mysql_proxy``


.. note::
  This extension is only available in :ref:`contrib <install_contrib>` images.


.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.network <extension_category_envoy.filters.network>`

MySQL Proxy :ref:`configuration overview <config_network_filters_mysql_proxy>`.

.. _envoy_v3_api_msg_extensions.filters.network.mysql_proxy.v3.MySQLProxy:

extensions.filters.network.mysql_proxy.v3.MySQLProxy
----------------------------------------------------

:repo:`[extensions.filters.network.mysql_proxy.v3.MySQLProxy proto] <api/contrib/envoy/extensions/filters/network/mysql_proxy/v3/mysql_proxy.proto#L17>`


.. code-block:: json

  {
    "stat_prefix": "..."
  }

.. _envoy_v3_api_field_extensions.filters.network.mysql_proxy.v3.MySQLProxy.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The human readable prefix to use when emitting :ref:`statistics
  <config_network_filters_mysql_proxy_stats>`.
  
  


